testsuite/poke.pkl/int-struct-type-diag-11.pk
/* { dg-do compile } */

type Foo =  /* { dg-error "integral" } */
  union int<32>
  {
  };
